--- a/package/crds/gatewaysandrouting.crossplane.io_policytier0gatewayinterfaces.yaml
+++ b/package/crds/gatewaysandrouting.crossplane.io_policytier0gatewayinterfaces.yaml
@@ -75,6 +75,9 @@ spec:
                   description:
                     description: Description for this resource
                     type: string
+                  dhcpRelayPath:
+                    description: Policy path for DHCP relay config
+                    type: string
                   displayName:
                     description: Display name for this resource
                     type: string
@@ -361,6 +364,9 @@ spec:
                     type: number
                   description:
                     description: Description for this resource
+                    type: string
+                  dhcpRelayPath:
+                    description: Policy path for DHCP relay config
                     type: string
                   displayName:
                     description: Display name for this resource
