--- a/package/crds/firewall.crossplane.io_policygatewaypolicies.yaml
+++ b/package/crds/firewall.crossplane.io_policygatewaypolicies.yaml
@@ -495,6 +495,9 @@ spec:
                         nsxId:
                           description: NSX ID for this resource
                           type: string
+                        path:
+                          description: Policy path for this resource
+                          type: string
                         profiles:
                           description: List of profiles
                           items:
