--- a/package/crds/gatewaysandrouting.crossplane.io_policytier0gateways.yaml
+++ b/package/crds/gatewaysandrouting.crossplane.io_policytier0gateways.yaml
@@ -188,6 +188,9 @@ spec:
                           description: The path of the edge cluster connected to this
                             gateway
                           type: string
+                        nsxId:
+                          description: NSX ID for this resource
+                          type: string
                         preferredEdgePaths:
                           description: Paths of specific edge nodes
                           items:
@@ -340,6 +343,11 @@ spec:
                       required:
                       - gatewayPath
                       type: object
+                    type: array
+                  vrfTransitSubnets:
+                    description: VRF transit subnets in CIDR format
+                    items:
+                      type: string
                     type: array
                 type: object
               managementPolicy:
@@ -673,6 +681,9 @@ spec:
                           description: The path of the edge cluster connected to this
                             gateway
                           type: string
+                        nsxId:
+                          description: NSX ID for this resource
+                          type: string
                         path:
                           description: Policy path for this resource
                           type: string
@@ -851,6 +862,11 @@ spec:
                             type: object
                           type: array
                       type: object
+                    type: array
+                  vrfTransitSubnets:
+                    description: VRF transit subnets in CIDR format
+                    items:
+                      type: string
                     type: array
                 type: object
               conditions:
