--- a/package/crds/segments.crossplane.io_policyvlansegments.yaml
+++ b/package/crds/segments.crossplane.io_policyvlansegments.yaml
@@ -158,6 +158,18 @@ spec:
                   domainName:
                     description: DNS domain names
                     type: string
+                  ignoreTags:
+                    items:
+                      properties:
+                        scopes:
+                          description: List of scopes to ignore
+                          items:
+                            type: string
+                          type: array
+                      required:
+                      - scopes
+                      type: object
+                    type: array
                   l2Extension:
                     description: Configuration for extending Segment through L2 VPN
                     items:
@@ -171,6 +183,11 @@ spec:
                           description: Tunnel ID
                           type: number
                       type: object
+                    type: array
+                  metadataProxyPaths:
+                    description: Metadata Proxy Configuration Paths
+                    items:
+                      type: string
                     type: array
                   nsxId:
                     description: NSX ID for this resource
@@ -629,6 +646,26 @@ spec:
                     type: string
                   id:
                     type: string
+                  ignoreTags:
+                    items:
+                      properties:
+                        detected:
+                          description: Tags matching scopes to ignore
+                          items:
+                            properties:
+                              scope:
+                                type: string
+                              tag:
+                                type: string
+                            type: object
+                          type: array
+                        scopes:
+                          description: List of scopes to ignore
+                          items:
+                            type: string
+                          type: array
+                      type: object
+                    type: array
                   l2Extension:
                     description: Configuration for extending Segment through L2 VPN
                     items:
@@ -642,6 +679,11 @@ spec:
                           description: Tunnel ID
                           type: number
                       type: object
+                    type: array
+                  metadataProxyPaths:
+                    description: Metadata Proxy Configuration Paths
+                    items:
+                      type: string
                     type: array
                   nsxId:
                     description: NSX ID for this resource
